# FarmacoGraph

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  Dockerfile  README.md  TOOLING.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
.husky/: pre-commit
alembic/: env.py
alembic/versions/: 001_initial_operational_schema.py  002_curator_draft_package_json.py  003_curator_unpublish_request.py  004_demo_access_requests.py
apps/studio/: .dockerignore  .env.example  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
architecture/: events.json  plugin-interfaces.json  snapshots.schema.json
configs/: default.yaml
deploy/nginx/: farmacograph.conf
docs/: api-first.md  api-roadmap.md  api.md  architecture-diagrams.md  architecture.md  auth.md  curation-studio.md  data-model.md  deploy-nginx.md  deploy-studio.md  development.md  education-layer.md  entity-relationship-matrix.md  getting-started.md  graph-specification.md  handoff-curator-mvp.md  learning-graph.md  licensing.md  ontology.md  phase3-infrastructure.md  phase4-curation.md  phase4-curator.md  pipeline.md  platform-architecture.md  repo-visibility.md  repository-structure.md  roadmap.md  studio-roadmap.md  test-strategy.md  validation-matrix.md
docs/adr/: README.md
docs/audits/: 2026-07-08-architecture-audit.md  2026-07-08-codex-audit.md  2026-07-08-connected-studio-surfaces-sprint.md  2026-07-08-disease-completion-phase1.md  2026-07-08-evidence-hardening-sprint.md  2026-07-08-module-transition-sprint.md  2026-07-08-pre-sprint5-readiness-audit.md  2026-07-08-sprint3-architecture-audit.md  (+2 more)
docs/product/: mcp-server.md  (+3 more)
farmacograph/: __init__.py  __main__.py
ontology/: constraints.json  entity-hierarchy.json  farmacograph-core.ttl  relationships.json
openapi/: openapi.yaml
scripts/: bootstrap-cv.sh  create-curator.sh  deploy-production.sh  dev.sh  diagnose.sh  find-ports.sh  fix-studio-production.sh  install-nginx.sh  migrate-schema.sh  promote-admin.sh  publish-drug.sh  publish-stub.sh  smoke-studio-staging.sh  smoke-studio.sh
tests/: conftest.py
(+436 files in other folders)
