[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "farmacograph"
version = "0.1.0"
description = "Explainable biomedical knowledge graph for medical education"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "FarmacoGraph Contributors" }]
keywords = ["pharmacology", "knowledge-graph", "medical-education", "neo4j", "ontology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "httpx>=0.27,<1",
    "python-multipart>=0.0.9,<1",
]
graph = [
    "neo4j>=5.19,<6",
]
db = [
    "sqlalchemy[asyncio]>=2.0,<3",
    "alembic>=1.13,<2",
    "asyncpg>=0.29,<1",
    "greenlet>=3.0,<4",
]
auth = [
    "pyjwt>=2.8,<3",
    "passlib[bcrypt]>=1.7,<2",
]
observability = [
    "structlog>=24.1,<25",
    "prometheus-client>=0.20,<1",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.4,<1",
    "mypy>=1.9,<2",
    "jsonschema>=4.21,<5",
    "aiosqlite>=0.20,<1",
    "eval_type_backport>=0.2,<1",
]
all = ["farmacograph[api,graph,db,auth,observability,dev]"]

[project.scripts]
farmacograph = "farmacograph.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["farmacograph"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["farmacograph"]
omit = ["farmacograph/cli/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
